--- a/ProyectoFinal/ParametrosPeliculas.xaml
+++ b/ProyectoFinal/ParametrosPeliculas.xaml
@@ -6,17 +6,23 @@
              xmlns:local="clr-namespace:ProyectoFinal"
              mc:Ignorable="d" d:DesignWidth="800" Height="170">
     <Grid>
-        <TextBlock HorizontalAlignment="Left" Margin="1,3,0,0" TextWrapping="Wrap" Text="Titulo" VerticalAlignment="Top" Foreground="White"/>
+        <TextBlock HorizontalAlignment="Left" Margin="1,3,0,0" TextWrapping="Wrap" Text="TITULO" VerticalAlignment="Top" Foreground="White" FontFamily="Lucida Sans"/>
         <TextBox x:Name="txtTitulo" HorizontalAlignment="Left" Height="23" Margin="103,3,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="360" Background="#FFB9B9B9" Foreground="White"/>
-        <TextBlock HorizontalAlignment="Left" Margin="1,32,0,0" TextWrapping="Wrap" Text="Año" VerticalAlignment="Top" Foreground="White"/>
+        <TextBlock HorizontalAlignment="Left" Margin="1,32,0,0" TextWrapping="Wrap" Text="AÑO" VerticalAlignment="Top" Foreground="White"/>
         <TextBox x:Name="txtAño" HorizontalAlignment="Left" Height="23" Margin="103,31,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="79" Background="#FFB9B9B9" Foreground="White"/>
-        <TextBlock HorizontalAlignment="Left" Margin="257,32,0,0" TextWrapping="Wrap" Text="Genero" VerticalAlignment="Top" Foreground="White"/>
+        <TextBlock HorizontalAlignment="Left" Margin="257,32,0,0" TextWrapping="Wrap" Text="GENERO" VerticalAlignment="Top" Foreground="White" FontFamily="Lucida Sans"/>
         <TextBox x:Name="txtGenero" HorizontalAlignment="Left" Height="23" Margin="344,31,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="119" Background="#FFB9B9B9" Foreground="White"/>
         <TextBox x:Name="txtProduccion" HorizontalAlignment="Left" Height="23" Margin="103,58,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="360" Background="#FFB9B9B9" Foreground="White"/>
-        <TextBlock HorizontalAlignment="Left" Margin="0,87,0,0" TextWrapping="Wrap" Text="Sinopsis" VerticalAlignment="Top" Foreground="White"/>
+        <TextBlock HorizontalAlignment="Left" Margin="0,87,0,0" TextWrapping="Wrap" Text="SINOPSIS" VerticalAlignment="Top" Foreground="White"/>
         <TextBox x:Name="txtDescripcion" HorizontalAlignment="Left" Height="23" Margin="103,87,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="360" Background="#FFB9B9B9" Foreground="White"/>
-        <TextBlock HorizontalAlignment="Left" Margin="1,115,0,0" TextWrapping="Wrap" Text="Rating" VerticalAlignment="Top" Foreground="White"/>
-        <ComboBox x:Name="cbRat" HorizontalAlignment="Left" Margin="103,115,0,0" VerticalAlignment="Top" Width="36" Foreground="White">
+        <TextBlock HorizontalAlignment="Left" Margin="1,115,0,0" TextWrapping="Wrap" Text="RATING" VerticalAlignment="Top" Foreground="White"/>
+        <ComboBox x:Name="cbRat" HorizontalAlignment="Left" Margin="103,115,0,0" VerticalAlignment="Top" Width="36" Foreground="Black" BorderBrush="{x:Null}">
+            <ComboBoxItem Background="#FFB9B9B9" BorderBrush="{x:Null}">0</ComboBoxItem>
+            <ComboBoxItem Background="#FFB9B9B9" BorderBrush="{x:Null}">1</ComboBoxItem>
+            <ComboBoxItem Background="#FFB9B9B9" BorderBrush="{x:Null}">2</ComboBoxItem>
+            <ComboBoxItem Background="#FFB9B9B9" BorderBrush="{x:Null}">3</ComboBoxItem>
+            <ComboBoxItem Background="#FFB9B9B9" BorderBrush="{x:Null}">4</ComboBoxItem>
+            <ComboBoxItem Background="#FFB9B9B9" BorderBrush="{x:Null}">5</ComboBoxItem>
             <ComboBox.Background>
                 <LinearGradientBrush EndPoint="0,1" StartPoint="0,0">
                     <GradientStop Color="#FFF0F0F0" Offset="0"/>
@@ -24,6 +30,6 @@
                 </LinearGradientBrush>
             </ComboBox.Background>
         </ComboBox>
-        <TextBlock HorizontalAlignment="Left" Margin="0,58,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Foreground="White"><Run Text="Direc"/><Run Text="tor"/></TextBlock>
+        <TextBlock HorizontalAlignment="Left" Margin="0,58,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Foreground="White" Text="DIRECTOR" FontFamily="Lucida Sans"/>
     </Grid>
 </UserControl>
