--- a/ProyectoFinal/ParametrosSeries.xaml
+++ b/ProyectoFinal/ParametrosSeries.xaml
@@ -6,13 +6,13 @@
              xmlns:local="clr-namespace:ProyectoFinal"
              mc:Ignorable="d" d:DesignWidth="800" Height="168.312">
     <Grid>
-        <TextBlock HorizontalAlignment="Left" Margin="2,0,0,0" TextWrapping="Wrap" Text="Titulo" VerticalAlignment="Top" Foreground="White"/>
+        <TextBlock HorizontalAlignment="Left" Margin="2,0,0,0" TextWrapping="Wrap" Text="TITULO" VerticalAlignment="Top" Foreground="White" FontFamily="Lucida Sans"/>
         <TextBox x:Name="txtTitulo" HorizontalAlignment="Left" Height="23" Margin="104,0,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="360" Background="#FFB9B9B9" Foreground="White"/>
-        <TextBlock HorizontalAlignment="Left" Margin="2,29,0,0" TextWrapping="Wrap" Text="Año" VerticalAlignment="Top" Foreground="White"/>
+        <TextBlock HorizontalAlignment="Left" Margin="2,29,0,0" TextWrapping="Wrap" Text="AÑO" VerticalAlignment="Top" Foreground="White" FontFamily="Lucida Sans"/>
         <TextBox x:Name="txtAño" HorizontalAlignment="Left" Height="23" Margin="104,28,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="79" Background="#FFB9B9B9" Foreground="White"/>
-        <TextBlock HorizontalAlignment="Left" Margin="258,29,0,0" TextWrapping="Wrap" Text="Genero" VerticalAlignment="Top" Foreground="White"/>
+        <TextBlock HorizontalAlignment="Left" Margin="258,29,0,0" TextWrapping="Wrap" Text="GENERO" VerticalAlignment="Top" Foreground="White" FontFamily="Lucida Sans"/>
         <TextBox x:Name="txtGenero" HorizontalAlignment="Left" Height="23" Margin="345,28,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="119" Background="#FFB9B9B9" Foreground="White"/>
-        <TextBlock HorizontalAlignment="Left" Margin="1,56,0,0" TextWrapping="Wrap" Text="Temporadas" VerticalAlignment="Top" Foreground="White"/>
+        <TextBlock HorizontalAlignment="Left" Margin="1,56,0,0" TextWrapping="Wrap" Text="TEMPORADAS" VerticalAlignment="Top" Foreground="White" FontFamily="Lucida Sans"/>
         <ComboBox x:Name="cbTemp" HorizontalAlignment="Left" Margin="104,56,0,0" VerticalAlignment="Top" Width="36" Foreground="White">
             <ComboBox.Background>
                 <LinearGradientBrush EndPoint="0,1" StartPoint="0,0">
@@ -23,18 +23,24 @@
         </ComboBox>
         <TextBlock HorizontalAlignment="Left" Margin="258,62,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top"/>
         <TextBox x:Name="txtProduccion" HorizontalAlignment="Left" Height="23" Margin="345,54,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="119" Background="#FFB9B9B9" Foreground="White"/>
-        <TextBlock HorizontalAlignment="Left" Margin="1,84,0,0" TextWrapping="Wrap" Text="Descripcion" VerticalAlignment="Top" Foreground="White"/>
+        <TextBlock HorizontalAlignment="Left" Margin="1,84,0,0" TextWrapping="Wrap" Text="DESCRIPCION" VerticalAlignment="Top" Foreground="White" FontFamily="Lucida Sans"/>
         <TextBox x:Name="txtDescripcion" HorizontalAlignment="Left" Height="23" Margin="104,84,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="360" Background="#FFB9B9B9" Foreground="White"/>
-        <TextBlock HorizontalAlignment="Left" Margin="2,112,0,0" TextWrapping="Wrap" Text="Rating" VerticalAlignment="Top" Foreground="White"/>
-        <ComboBox x:Name="cbRat" HorizontalAlignment="Left" Margin="104,112,0,0" VerticalAlignment="Top" Width="36" Foreground="White">
+        <TextBlock HorizontalAlignment="Left" Margin="2,112,0,0" TextWrapping="Wrap" Text="RATING" VerticalAlignment="Top" Foreground="White" FontFamily="Lucida Sans"/>
+        <TextBlock HorizontalAlignment="Left" Margin="258,56,0,0" TextWrapping="Wrap" Text="PRODUCCION" VerticalAlignment="Top" Foreground="White" FontFamily="Lucida Sans"/>
+        <ComboBox x:Name="cbRat" HorizontalAlignment="Left" Margin="104,107,0,0" VerticalAlignment="Top" Width="36" Foreground="Black" BorderBrush="{x:Null}">
             <ComboBox.Background>
                 <LinearGradientBrush EndPoint="0,1" StartPoint="0,0">
                     <GradientStop Color="#FFF0F0F0" Offset="0"/>
                     <GradientStop Color="#FFB9B9B9" Offset="1"/>
                 </LinearGradientBrush>
             </ComboBox.Background>
+            <ComboBoxItem Background="#FFB9B9B9" BorderBrush="{x:Null}" Content="0"/>
+            <ComboBoxItem Background="#FFB9B9B9" BorderBrush="{x:Null}" Content="1"/>
+            <ComboBoxItem Background="#FFB9B9B9" BorderBrush="{x:Null}" Content="2"/>
+            <ComboBoxItem Background="#FFB9B9B9" BorderBrush="{x:Null}" Content="3"/>
+            <ComboBoxItem Background="#FFB9B9B9" BorderBrush="{x:Null}" Content="4"/>
+            <ComboBoxItem Background="#FFB9B9B9" BorderBrush="{x:Null}" Content="5"/>
         </ComboBox>
-        <TextBlock HorizontalAlignment="Left" Margin="258,56,0,0" TextWrapping="Wrap" Text="Produccion" VerticalAlignment="Top" Foreground="White"/>
 
     </Grid>
 </UserControl>
