--- a/ProyectoFinal/MainWindow.xaml
+++ b/ProyectoFinal/MainWindow.xaml
@@ -7,7 +7,7 @@
         mc:Ignorable="d"
         Title="PELICULAS &amp; SERIES" Height="450" Width="800">
     <Grid Background="#FF3F335F">
-        <ListView x:Name="lstPelis" HorizontalAlignment="Left" Height="249" Margin="54,49,0,0" VerticalAlignment="Top" Width="171" Background="#FF5E467F" BorderBrush="{x:Null}" FontFamily="Lucida Sans" Foreground="#FF858585" FontSize="14" SelectionChanged="lstPelis_SelectionChanged_1">
+        <ListView x:Name="lstPelis" HorizontalAlignment="Left" Height="286" Margin="19,49,0,0" VerticalAlignment="Top" Width="251" Background="#FF5E467F" BorderBrush="{x:Null}" FontFamily="Lucida Sans" Foreground="#FF858585" FontSize="14" SelectionChanged="lstPelis_SelectionChanged_1">
             <ListView.View>
                 <GridView>
                     <GridViewColumn DisplayMemberBinding="{Binding Titulo}" Header="Titulo"></GridViewColumn>
@@ -16,7 +16,7 @@
             </ListView.View>
         </ListView>
         <TextBlock HorizontalAlignment="Left" Margin="430,0,0,0" TextWrapping="Wrap" VerticalAlignment="Top" FontFamily="Segoe UI Black" FontSize="36" Foreground="#FFC8C8C8"><Run Text="PEL"/><Run Text="I"/><Run Text="CULAS Y SERIES"/></TextBlock>
-        <Button x:Name="btnOrdenar1" Content="Ordenar A-Z" HorizontalAlignment="Left" Margin="54,318,0,0" VerticalAlignment="Top" Width="75" Click="btnOrdenar1_Click" BorderBrush="{x:Null}" Foreground="White">
+        <Button x:Name="btnOrdenar1" Content="Ordenar A-Z" HorizontalAlignment="Left" Margin="19,342,0,0" VerticalAlignment="Top" Width="123" Click="btnOrdenar1_Click" BorderBrush="{x:Null}" Foreground="White" Height="25">
             <Button.Background>
                 <LinearGradientBrush EndPoint="0.5,1" StartPoint="0.5,0">
                     <GradientStop Color="#FF5C3CC2" Offset="1"/>
@@ -24,7 +24,7 @@
                 </LinearGradientBrush>
             </Button.Background>
         </Button>
-        <Button x:Name="btnOrdenar2" Content="Ordenar Z-A" HorizontalAlignment="Left" Margin="54,358,0,0" VerticalAlignment="Top" Width="75" Click="btnOrdenar2_Click" Foreground="White">
+        <Button x:Name="btnOrdenar2" Content="Ordenar Z-A" HorizontalAlignment="Left" Margin="19,376,0,0" VerticalAlignment="Top" Width="123" Click="btnOrdenar2_Click" Foreground="White" Height="25">
             <Button.Background>
                 <LinearGradientBrush EndPoint="0.5,1" StartPoint="0.5,0">
                     <GradientStop Color="#FF8579AB" Offset="0"/>
@@ -32,7 +32,7 @@
                 </LinearGradientBrush>
             </Button.Background>
         </Button>
-        <Button x:Name="btnAño" Content="↑ Año" HorizontalAlignment="Left" Margin="150,318,0,0" VerticalAlignment="Top" Width="75" Click="btnAño_Click" Foreground="White">
+        <Button x:Name="btnAño" Content="↑ Año" HorizontalAlignment="Left" Margin="147,342,0,0" VerticalAlignment="Top" Width="123" Click="btnAño_Click" Foreground="White" Height="25">
             <Button.Background>
                 <LinearGradientBrush EndPoint="0.5,1" StartPoint="0.5,0">
                     <GradientStop Color="#FF8579AB" Offset="0"/>
@@ -40,7 +40,7 @@
                 </LinearGradientBrush>
             </Button.Background>
         </Button>
-        <Button x:Name="btnAño2" Content="↓ Año" HorizontalAlignment="Left" Margin="150,358,0,0" VerticalAlignment="Top" Width="75" Click="btnAño2_Click" Foreground="White">
+        <Button x:Name="btnAño2" Content="↓ Año" HorizontalAlignment="Left" Margin="147,376,0,0" VerticalAlignment="Top" Width="123" Click="btnAño2_Click" Foreground="White" Height="25">
             <Button.Background>
                 <LinearGradientBrush EndPoint="0.5,1" StartPoint="0.5,0">
                     <GradientStop Color="#FF8579AB" Offset="0"/>
@@ -48,7 +48,7 @@
                 </LinearGradientBrush>
             </Button.Background>
         </Button>
-        <Button x:Name="btnNuevo" Content="Nuevo Elemento" HorizontalAlignment="Left" Margin="244,49,0,0" VerticalAlignment="Top" Width="109" Foreground="White" Click="btnNuevo_Click">
+        <Button x:Name="btnNuevo" Content="Nuevo Elemento" HorizontalAlignment="Left" Margin="286,49,0,0" VerticalAlignment="Top" Width="109" Foreground="White" Click="btnNuevo_Click" Height="25">
             <Button.Background>
                 <LinearGradientBrush EndPoint="0.5,1" StartPoint="0.5,0">
                     <GradientStop Color="#FF8579AB" Offset="0"/>
@@ -56,7 +56,6 @@
                 </LinearGradientBrush>
             </Button.Background>
         </Button>
-        <Grid x:Name="grdNuevo" HorizontalAlignment="Left" Height="309" Margin="244,68,0,0" VerticalAlignment="Top" Width="528"/>
         <Button x:Name="btnCancelar" Visibility="Hidden"  Content="Cancelar" HorizontalAlignment="Left" Margin="697,358,0,0" VerticalAlignment="Top" Width="75" BorderBrush="{x:Null}" Foreground="White" Click="btnCancelar_Click">
             <Button.Background>
                 <LinearGradientBrush EndPoint="0.5,1" StartPoint="0.5,0">
@@ -73,8 +72,8 @@
                 </LinearGradientBrush>
             </Button.Background>
         </Button>
-        <Grid x:Name="grdEditar" HorizontalAlignment="Left" Height="304" Margin="244,73,0,0" VerticalAlignment="Top" Width="540"/>
-        <Button x:Name="btnEditar" Visibility="Hidden" Content="Habilitar Edicion" HorizontalAlignment="Left" Margin="244,358,0,0" VerticalAlignment="Top" Width="131" BorderBrush="{x:Null}" Foreground="White" Click="btnEditar_Click">
+        <Grid x:Name="grdEditar" HorizontalAlignment="Left" Height="294" Margin="286,83,0,0" VerticalAlignment="Top" Width="498"/>
+        <Button x:Name="btnEditar" Visibility="Hidden" Content="Habilitar Edicion" HorizontalAlignment="Left" Margin="318,358,0,0" VerticalAlignment="Top" Width="131" BorderBrush="{x:Null}" Foreground="White" Click="btnEditar_Click" Height="25">
             <Button.Background>
                 <LinearGradientBrush EndPoint="0.5,1" StartPoint="0.5,0">
                     <GradientStop Color="#FF5C3CC2" Offset="1"/>
@@ -82,7 +81,7 @@
                 </LinearGradientBrush>
             </Button.Background>
         </Button>
-        <Button x:Name="btnEliminarElemento" Visibility="Hidden" Content="Eliminar Elemento" HorizontalAlignment="Left" Margin="398,358,0,0" VerticalAlignment="Top" Width="131" BorderBrush="{x:Null}" Foreground="White" Click="btnEliminarElemento_Click">
+        <Button x:Name="btnEliminarElemento" Visibility="Hidden" Content="Eliminar Elemento" HorizontalAlignment="Left" Margin="472,358,0,0" VerticalAlignment="Top" Width="131" BorderBrush="{x:Null}" Foreground="White" Click="btnEliminarElemento_Click" Height="25">
             <Button.Background>
                 <LinearGradientBrush EndPoint="0.5,1" StartPoint="0.5,0">
                     <GradientStop Color="#FF5C3CC2" Offset="1"/>
@@ -90,7 +89,7 @@
                 </LinearGradientBrush>
             </Button.Background>
         </Button>
-        <Button x:Name="btnCancelar2" Visibility="Hidden" Content="Cancelar" HorizontalAlignment="Left" Margin="550,358,0,0" VerticalAlignment="Top" Width="131" BorderBrush="{x:Null}" Foreground="White" Click="btnCancelar2_Click">
+        <Button x:Name="btnCancelar2" Visibility="Hidden" Content="Cancelar" HorizontalAlignment="Left" Margin="624,358,0,0" VerticalAlignment="Top" Width="131" BorderBrush="{x:Null}" Foreground="White" Click="btnCancelar2_Click" Height="25">
             <Button.Background>
                 <LinearGradientBrush EndPoint="0.5,1" StartPoint="0.5,0">
                     <GradientStop Color="#FF5C3CC2" Offset="1"/>
