--- a/ProyectoFinal/VisualizarElemento.xaml
+++ b/ProyectoFinal/VisualizarElemento.xaml
@@ -13,14 +13,19 @@
         <TextBox x:Name="txtAño" HorizontalAlignment="Left" Height="23" Margin="107,113,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="79" Background="#FFB9B9B9" Foreground="White" IsEnabled="False"/>
         <TextBlock HorizontalAlignment="Left" Margin="261,114,0,0" TextWrapping="Wrap" Text="GENERO" VerticalAlignment="Top" Foreground="White" FontFamily="Lucida Sans"/>
         <TextBox x:Name="txtGenero" HorizontalAlignment="Left" Height="23" Margin="348,113,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="119" Background="#FFB9B9B9" Foreground="White" IsEnabled="False"/>
-        <TextBlock HorizontalAlignment="Left" Margin="5,197,0,0" TextWrapping="Wrap" Text="RATING" VerticalAlignment="Top" Foreground="White" FontFamily="Lucida Sans"/>
+        <TextBlock HorizontalAlignment="Left" Margin="5,204,0,0" TextWrapping="Wrap" Text="RATING" VerticalAlignment="Top" Foreground="White" FontFamily="Lucida Sans"/>
         <TextBlock x:Name="txtTitulo1" HorizontalAlignment="Left" TextWrapping="Wrap" Text="VISUALIZAR ELEMENTO" VerticalAlignment="Top" Height="26" Width="305" Foreground="#FF8C8C8C" FontSize="18" FontFamily="Segoe UI Black"/>
         <TextBlock HorizontalAlignment="Left" Margin="5,41,0,0" TextWrapping="Wrap" Text="TIPO:" VerticalAlignment="Top" Foreground="White" FontFamily="Lucida Sans"/>
         <TextBox x:Name="txtProduccion" HorizontalAlignment="Left" Height="23" Margin="107,139,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="360" Background="#FFB9B9B9" Foreground="White" IsEnabled="False"/>
         <TextBlock HorizontalAlignment="Left" Margin="4,168,0,0" TextWrapping="Wrap" Text="SINOPSIS" VerticalAlignment="Top" Foreground="White"/>
         <TextBox x:Name="txtDescripcion" HorizontalAlignment="Left" Height="23" Margin="107,168,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="360" Background="#FFB9B9B9" Foreground="White" IsEnabled="False"/>
         <TextBlock HorizontalAlignment="Left" Margin="4,139,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Foreground="White" Text="DIRECTOR" FontFamily="Lucida Sans"/>
-        <Rectangle Fill="#FFB9B9B9" HorizontalAlignment="Left" Height="14" Margin="107,197,0,0" Stroke="Black" VerticalAlignment="Top" Width="30" IsEnabled="False"/>
         <TextBox x:Name="txtTipo" HorizontalAlignment="Left" Height="23" Margin="107,41,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="79" Background="#FFB9B9B9" Foreground="White" IsEnabled="False"/>
+        <Image x:Name="star2" HorizontalAlignment="Left" Height="43" Margin="155,196,0,0" VerticalAlignment="Top" Width="43" Source="images/estrella1.png"/>
+        <Image x:Name="star3" HorizontalAlignment="Left" Height="43" Margin="203,196,0,0" VerticalAlignment="Top" Width="43" Source="images/estrella1.png"/>
+        <Image x:Name="star4" HorizontalAlignment="Left" Height="43" Margin="251,196,0,0" VerticalAlignment="Top" Width="43" Source="images/estrella2.png"/>
+        <Image HorizontalAlignment="Left" Height="43" Margin="299,196,0,0" VerticalAlignment="Top" Width="43" Source="images/estrella2.png"/>
+        <Image x:Name="star1" HorizontalAlignment="Left" Height="43"  Width="43" Source="images/estrella1.png" Margin="107,196,0,210.6"/>
+
     </Grid>
 </UserControl>
