--- a/ProyectoFinal/EditarElemento.xaml
+++ b/ProyectoFinal/EditarElemento.xaml
@@ -7,25 +7,25 @@
              mc:Ignorable="d" 
              d:DesignHeight="450" d:DesignWidth="800">
     <Grid>
-        <TextBlock HorizontalAlignment="Left" Margin="5,85,0,0" TextWrapping="Wrap" Text="TITULO" VerticalAlignment="Top" Foreground="White" FontFamily="Lucida Sans"/>
-        <TextBox x:Name="txtTitulo" HorizontalAlignment="Left" Height="23" Margin="107,85,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="360" Background="#FFB9B9B9" Foreground="White"/>
-        <TextBlock HorizontalAlignment="Left" Margin="5,114,0,0" TextWrapping="Wrap" Text="AÑO" VerticalAlignment="Top" Foreground="White" FontFamily="Lucida Sans"/>
-        <TextBox x:Name="txtAño" HorizontalAlignment="Left" Height="23" Margin="107,113,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="79" Background="#FFB9B9B9" Foreground="White"/>
-        <TextBlock HorizontalAlignment="Left" Margin="261,114,0,0" TextWrapping="Wrap" Text="GENERO" VerticalAlignment="Top" Foreground="White" FontFamily="Lucida Sans"/>
-        <TextBox x:Name="txtGenero" HorizontalAlignment="Left" Height="23" Margin="348,113,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="119" Background="#FFB9B9B9" Foreground="White"/>
-        <TextBlock HorizontalAlignment="Left" Margin="5,197,0,0" TextWrapping="Wrap" Text="RATING" VerticalAlignment="Top" Foreground="White" FontFamily="Lucida Sans"/>
+        <TextBlock HorizontalAlignment="Left" Margin="0,71,0,0" TextWrapping="Wrap" Text="TITULO" VerticalAlignment="Top" Foreground="White" FontFamily="Lucida Sans"/>
+        <TextBox x:Name="txtTitulo" HorizontalAlignment="Left" Height="23" Margin="107,69,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="360" Background="#FFB9B9B9" Foreground="Black" FontFamily="Lucida Sans" FontWeight="Bold" FontSize="14"/>
+        <TextBlock HorizontalAlignment="Left" Margin="0,99,0,0" TextWrapping="Wrap" Text="AÑO" VerticalAlignment="Top" Foreground="White" FontFamily="Lucida Sans" RenderTransformOrigin="0.252,0.392"/>
+        <TextBox x:Name="txtAño" HorizontalAlignment="Left" Height="23" Margin="107,96,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="79" Background="#FFB9B9B9" Foreground="Black" FontFamily="Lucida Sans" FontWeight="Bold" FontSize="14"/>
+        <TextBlock HorizontalAlignment="Left" Margin="258,99,0,0" TextWrapping="Wrap" Text="GENERO" VerticalAlignment="Top" Foreground="White" FontFamily="Lucida Sans"/>
+        <TextBox x:Name="txtGenero" HorizontalAlignment="Left" Height="23" Margin="348,96,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="119" Background="#FFB9B9B9" Foreground="Black" FontFamily="Lucida Sans" FontWeight="Bold" FontSize="14"/>
+        <TextBlock HorizontalAlignment="Left" Margin="0,265,0,0" TextWrapping="Wrap" Text="RATING" VerticalAlignment="Top" Foreground="White" FontFamily="Lucida Sans"/>
         <TextBlock x:Name="txtTitulo1" HorizontalAlignment="Left" TextWrapping="Wrap" Text="EDITAR ELEMENTO" VerticalAlignment="Top" Height="26" Width="305" Foreground="#FF8C8C8C" FontSize="18" FontFamily="Segoe UI Black"/>
-        <TextBlock HorizontalAlignment="Left" Margin="5,41,0,0" TextWrapping="Wrap" Text="TIPO:" VerticalAlignment="Top" Foreground="White" FontFamily="Lucida Sans"/>
-        <TextBox x:Name="txtProduccion" HorizontalAlignment="Left" Height="23" Margin="107,139,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="360" Background="#FFB9B9B9" Foreground="White"/>
-        <TextBlock HorizontalAlignment="Left" Margin="4,168,0,0" TextWrapping="Wrap" Text="SINOPSIS" VerticalAlignment="Top" Foreground="White"/>
-        <TextBox x:Name="txtDescripcion" HorizontalAlignment="Left" Height="23" Margin="107,168,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="360" Background="#FFB9B9B9" Foreground="White"/>
-        <TextBlock HorizontalAlignment="Left" Margin="4,139,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Foreground="White" Text="DIRECTOR" FontFamily="Lucida Sans"/>
-        <TextBox x:Name="txtTipo" HorizontalAlignment="Left" Height="23" Margin="107,41,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="79" Background="#FFB9B9B9" Foreground="White"/>
-        <ComboBox x:Name="cbRat" HorizontalAlignment="Left" Margin="107,196,0,0" VerticalAlignment="Top" Width="36" Foreground="Black" BorderBrush="{x:Null}">
+        <TextBlock HorizontalAlignment="Left" Margin="0,41,0,0" TextWrapping="Wrap" Text="TIPO:" VerticalAlignment="Top" Foreground="White" FontFamily="Lucida Sans"/>
+        <TextBox x:Name="txtProduccion" HorizontalAlignment="Left" Height="23" Margin="107,123,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="360" Background="#FFB9B9B9" Foreground="Black" FontFamily="Lucida Sans" FontWeight="Bold" FontSize="14"/>
+        <TextBlock HorizontalAlignment="Left" Margin="0,154,0,0" TextWrapping="Wrap" Text="SINOPSIS" VerticalAlignment="Top" Foreground="White"/>
+        <TextBox x:Name="txtDescripcion" HorizontalAlignment="Left" Height="101" Margin="107,151,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="360" Background="#FFB9B9B9" Foreground="Black" FontFamily="Lucida Sans" FontWeight="Bold" FontSize="14"/>
+        <TextBlock HorizontalAlignment="Left" Margin="0,125,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Foreground="White" Text="DIRECTOR" FontFamily="Lucida Sans"/>
+        <TextBox x:Name="txtTipo" HorizontalAlignment="Left" Height="23" Margin="107,41,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="79" Background="#FFB9B9B9" Foreground="Black" FontFamily="Lucida Sans" FontSize="14" FontWeight="Bold"/>
+        <ComboBox x:Name="cbRat" HorizontalAlignment="Left" Margin="107,257,0,0" VerticalAlignment="Top" Width="36" Foreground="Black" BorderBrush="{x:Null}" FontFamily="Lucida Sans" FontWeight="Bold" FontSize="14">
             <ComboBox.Background>
                 <LinearGradientBrush EndPoint="0,1" StartPoint="0,0">
-                    <GradientStop Color="#FFF0F0F0" Offset="0"/>
-                    <GradientStop Color="#FFB9B9B9" Offset="1"/>
+                    <GradientStop Color="LightGray" Offset="0"/>
+                    <GradientStop Color="#FF6E6E6E" Offset="1"/>
                 </LinearGradientBrush>
             </ComboBox.Background>
             <ComboBoxItem Background="#FFB9B9B9" BorderBrush="{x:Null}" Content="0"/>
